# esp_obs_commander

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  README.md  partitions.csv  sdkconfig.defaults
components/: lvglpp
components/pngle/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  esp_obs_cmd.cpp  util.h
main/comm/: data_broker.h  data_node.h
main/comm/parser/: obs_parser.cpp  obs_parser.h  obs_parser_stub.cpp  obs_parser_stub.h  obs_reply_parser.cpp  obs_reply_parser.h  parser.h  parser_stub.h  serial_parser.cpp  serial_parser.h  serial_parser_stub.cpp  serial_parser_stub.h
main/comm/pipe/: uart_pipe.cpp  uart_pipe.h  websocket_pipe.cpp  websocket_pipe.h  wifi_pipe.cpp  wifi_pipe.h
main/gui/image/: image.h  image_lvgl.h  image_png.cpp  image_png.h
main/gui/widgets/: button.h  image.h  imgbtn.h  tgimgbtn.h  widget.h
main/hardware/: analog_pin.cpp  analog_pin.h  digital_pin.cpp  digital_pin.h
main/hardware/input/: res_touch.cpp  res_touch.h  touch.h  touch_lvgl.cpp  touch_lvgl.h
main/hardware/screen/: screen.h  screen_lvgl.cpp  screen_lvgl.h  st7789vi.cpp  st7789vi.h  st7789vi_defs.h
main/impl/: calibrate.cpp  calibrate.h  gui.cpp  gui.h  setup.cpp  setup.h  types.cpp  types.h
main/storage/: dir.cpp  dir.h  file.cpp  file.h  nvs.cpp  nvs.h  partition.h  partition_lvgl.h  spi_flash.cpp  spi_flash.h
scripts/: clear_calibration.py  conf_example.json  device.py  do_flash.sh  set_boot.py  set_flash.py  test_ws_server.py  write_config.py
